add precision, recall, f1 score when doing fcnn

--- a/nn_feature_data.ipynb
+++ b/nn_feature_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,113 +137,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/50], Step [10/22], Loss: 1.3455\n",
-      "Epoch [1/50], Step [20/22], Loss: 1.2079\n",
-      "Epoch [2/50], Step [10/22], Loss: 1.2541\n",
-      "Epoch [2/50], Step [20/22], Loss: 1.2030\n",
-      "Epoch [3/50], Step [10/22], Loss: 1.0094\n",
-      "Epoch [3/50], Step [20/22], Loss: 1.0527\n",
-      "Epoch [4/50], Step [10/22], Loss: 0.9586\n",
-      "Epoch [4/50], Step [20/22], Loss: 1.1019\n",
-      "Epoch [5/50], Step [10/22], Loss: 1.0777\n",
-      "Epoch [5/50], Step [20/22], Loss: 0.9944\n",
-      "Epoch [6/50], Step [10/22], Loss: 1.3318\n",
-      "Epoch [6/50], Step [20/22], Loss: 0.8980\n",
-      "Epoch [7/50], Step [10/22], Loss: 1.1078\n",
-      "Epoch [7/50], Step [20/22], Loss: 0.8436\n",
-      "Epoch [8/50], Step [10/22], Loss: 0.7213\n",
-      "Epoch [8/50], Step [20/22], Loss: 1.0679\n",
-      "Epoch [9/50], Step [10/22], Loss: 1.1545\n",
-      "Epoch [9/50], Step [20/22], Loss: 0.9225\n",
-      "Epoch [10/50], Step [10/22], Loss: 0.9372\n",
-      "Epoch [10/50], Step [20/22], Loss: 1.1264\n",
-      "Epoch [11/50], Step [10/22], Loss: 0.9559\n",
-      "Epoch [11/50], Step [20/22], Loss: 1.0338\n",
-      "Epoch [12/50], Step [10/22], Loss: 1.4438\n",
-      "Epoch [12/50], Step [20/22], Loss: 0.7372\n",
-      "Epoch [13/50], Step [10/22], Loss: 0.8043\n",
-      "Epoch [13/50], Step [20/22], Loss: 0.9788\n",
-      "Epoch [14/50], Step [10/22], Loss: 1.0271\n",
-      "Epoch [14/50], Step [20/22], Loss: 1.0800\n",
-      "Epoch [15/50], Step [10/22], Loss: 0.8877\n",
-      "Epoch [15/50], Step [20/22], Loss: 1.3654\n",
-      "Epoch [16/50], Step [10/22], Loss: 0.9153\n",
-      "Epoch [16/50], Step [20/22], Loss: 0.9362\n",
-      "Epoch [17/50], Step [10/22], Loss: 1.0279\n",
-      "Epoch [17/50], Step [20/22], Loss: 0.8981\n",
-      "Epoch [18/50], Step [10/22], Loss: 0.7131\n",
-      "Epoch [18/50], Step [20/22], Loss: 1.0005\n",
-      "Epoch [19/50], Step [10/22], Loss: 0.9107\n",
-      "Epoch [19/50], Step [20/22], Loss: 0.9761\n",
-      "Epoch [20/50], Step [10/22], Loss: 0.7445\n",
-      "Epoch [20/50], Step [20/22], Loss: 1.0300\n",
-      "Epoch [21/50], Step [10/22], Loss: 0.8094\n",
-      "Epoch [21/50], Step [20/22], Loss: 0.9702\n",
-      "Epoch [22/50], Step [10/22], Loss: 0.9018\n",
-      "Epoch [22/50], Step [20/22], Loss: 0.9725\n",
-      "Epoch [23/50], Step [10/22], Loss: 0.6994\n",
-      "Epoch [23/50], Step [20/22], Loss: 0.9527\n",
-      "Epoch [24/50], Step [10/22], Loss: 0.7785\n",
-      "Epoch [24/50], Step [20/22], Loss: 0.9114\n",
-      "Epoch [25/50], Step [10/22], Loss: 1.0204\n",
-      "Epoch [25/50], Step [20/22], Loss: 0.8421\n",
-      "Epoch [26/50], Step [10/22], Loss: 0.8944\n",
-      "Epoch [26/50], Step [20/22], Loss: 0.9343\n",
-      "Epoch [27/50], Step [10/22], Loss: 0.9965\n",
-      "Epoch [27/50], Step [20/22], Loss: 0.9291\n",
-      "Epoch [28/50], Step [10/22], Loss: 0.8158\n",
-      "Epoch [28/50], Step [20/22], Loss: 0.9563\n",
-      "Epoch [29/50], Step [10/22], Loss: 0.9092\n",
-      "Epoch [29/50], Step [20/22], Loss: 0.7231\n",
-      "Epoch [30/50], Step [10/22], Loss: 0.8702\n",
-      "Epoch [30/50], Step [20/22], Loss: 0.5974\n",
-      "Epoch [31/50], Step [10/22], Loss: 0.8988\n",
-      "Epoch [31/50], Step [20/22], Loss: 0.9235\n",
-      "Epoch [32/50], Step [10/22], Loss: 0.9250\n",
-      "Epoch [32/50], Step [20/22], Loss: 0.9243\n",
-      "Epoch [33/50], Step [10/22], Loss: 0.8059\n",
-      "Epoch [33/50], Step [20/22], Loss: 0.8352\n",
-      "Epoch [34/50], Step [10/22], Loss: 0.8149\n",
-      "Epoch [34/50], Step [20/22], Loss: 0.8527\n",
-      "Epoch [35/50], Step [10/22], Loss: 0.9650\n",
-      "Epoch [35/50], Step [20/22], Loss: 0.6720\n",
-      "Epoch [36/50], Step [10/22], Loss: 0.8827\n",
-      "Epoch [36/50], Step [20/22], Loss: 0.7131\n",
-      "Epoch [37/50], Step [10/22], Loss: 1.0710\n",
-      "Epoch [37/50], Step [20/22], Loss: 0.8568\n",
-      "Epoch [38/50], Step [10/22], Loss: 0.7816\n",
-      "Epoch [38/50], Step [20/22], Loss: 0.6996\n",
-      "Epoch [39/50], Step [10/22], Loss: 0.7515\n",
-      "Epoch [39/50], Step [20/22], Loss: 0.6483\n",
-      "Epoch [40/50], Step [10/22], Loss: 0.7692\n",
-      "Epoch [40/50], Step [20/22], Loss: 0.7145\n",
-      "Epoch [41/50], Step [10/22], Loss: 0.9201\n",
-      "Epoch [41/50], Step [20/22], Loss: 0.8600\n",
-      "Epoch [42/50], Step [10/22], Loss: 0.7189\n",
-      "Epoch [42/50], Step [20/22], Loss: 0.6409\n",
-      "Epoch [43/50], Step [10/22], Loss: 0.8061\n",
-      "Epoch [43/50], Step [20/22], Loss: 0.7621\n",
-      "Epoch [44/50], Step [10/22], Loss: 0.7511\n",
-      "Epoch [44/50], Step [20/22], Loss: 0.8375\n",
-      "Epoch [45/50], Step [10/22], Loss: 0.8389\n",
-      "Epoch [45/50], Step [20/22], Loss: 0.7177\n",
-      "Epoch [46/50], Step [10/22], Loss: 0.6813\n",
-      "Epoch [46/50], Step [20/22], Loss: 0.8641\n",
-      "Epoch [47/50], Step [10/22], Loss: 0.6902\n",
-      "Epoch [47/50], Step [20/22], Loss: 0.7712\n",
-      "Epoch [48/50], Step [10/22], Loss: 0.6078\n",
-      "Epoch [48/50], Step [20/22], Loss: 0.9552\n",
-      "Epoch [49/50], Step [10/22], Loss: 0.9387\n",
-      "Epoch [49/50], Step [20/22], Loss: 1.0657\n",
-      "Epoch [50/50], Step [10/22], Loss: 0.9794\n",
-      "Epoch [50/50], Step [20/22], Loss: 0.7981\n"
+      "Epoch [1/50], Step [10/22], Loss: 1.3270\n",
+      "Epoch [1/50], Step [20/22], Loss: 1.3678\n",
+      "Epoch [2/50], Step [10/22], Loss: 1.3011\n",
+      "Epoch [2/50], Step [20/22], Loss: 1.2346\n",
+      "Epoch [3/50], Step [10/22], Loss: 1.2716\n",
+      "Epoch [3/50], Step [20/22], Loss: 1.1259\n",
+      "Epoch [4/50], Step [10/22], Loss: 1.0765\n",
+      "Epoch [4/50], Step [20/22], Loss: 1.0634\n",
+      "Epoch [5/50], Step [10/22], Loss: 1.0152\n",
+      "Epoch [5/50], Step [20/22], Loss: 1.0026\n",
+      "Epoch [6/50], Step [10/22], Loss: 1.1803\n",
+      "Epoch [6/50], Step [20/22], Loss: 1.0246\n",
+      "Epoch [7/50], Step [10/22], Loss: 1.0400\n",
+      "Epoch [7/50], Step [20/22], Loss: 1.1066\n",
+      "Epoch [8/50], Step [10/22], Loss: 1.0691\n",
+      "Epoch [8/50], Step [20/22], Loss: 0.7458\n",
+      "Epoch [9/50], Step [10/22], Loss: 1.0081\n",
+      "Epoch [9/50], Step [20/22], Loss: 1.1105\n",
+      "Epoch [10/50], Step [10/22], Loss: 1.1659\n",
+      "Epoch [10/50], Step [20/22], Loss: 1.2017\n",
+      "Epoch [11/50], Step [10/22], Loss: 1.0760\n",
+      "Epoch [11/50], Step [20/22], Loss: 0.8350\n",
+      "Epoch [12/50], Step [10/22], Loss: 0.7879\n",
+      "Epoch [12/50], Step [20/22], Loss: 1.1196\n",
+      "Epoch [13/50], Step [10/22], Loss: 0.7566\n",
+      "Epoch [13/50], Step [20/22], Loss: 1.1543\n",
+      "Epoch [14/50], Step [10/22], Loss: 0.9522\n",
+      "Epoch [14/50], Step [20/22], Loss: 0.8977\n",
+      "Epoch [15/50], Step [10/22], Loss: 0.7353\n",
+      "Epoch [15/50], Step [20/22], Loss: 0.9163\n",
+      "Epoch [16/50], Step [10/22], Loss: 1.0779\n",
+      "Epoch [16/50], Step [20/22], Loss: 0.8567\n",
+      "Epoch [17/50], Step [10/22], Loss: 0.8228\n",
+      "Epoch [17/50], Step [20/22], Loss: 0.9806\n",
+      "Epoch [18/50], Step [10/22], Loss: 1.0661\n",
+      "Epoch [18/50], Step [20/22], Loss: 0.9973\n",
+      "Epoch [19/50], Step [10/22], Loss: 0.8364\n",
+      "Epoch [19/50], Step [20/22], Loss: 0.9787\n",
+      "Epoch [20/50], Step [10/22], Loss: 0.7997\n",
+      "Epoch [20/50], Step [20/22], Loss: 0.7556\n",
+      "Epoch [21/50], Step [10/22], Loss: 0.9801\n",
+      "Epoch [21/50], Step [20/22], Loss: 0.6078\n",
+      "Epoch [22/50], Step [10/22], Loss: 1.1802\n",
+      "Epoch [22/50], Step [20/22], Loss: 0.9113\n",
+      "Epoch [23/50], Step [10/22], Loss: 0.8443\n",
+      "Epoch [23/50], Step [20/22], Loss: 0.7428\n",
+      "Epoch [24/50], Step [10/22], Loss: 1.0156\n",
+      "Epoch [24/50], Step [20/22], Loss: 0.9246\n",
+      "Epoch [25/50], Step [10/22], Loss: 0.8133\n",
+      "Epoch [25/50], Step [20/22], Loss: 0.7837\n",
+      "Epoch [26/50], Step [10/22], Loss: 0.8676\n",
+      "Epoch [26/50], Step [20/22], Loss: 1.0791\n",
+      "Epoch [27/50], Step [10/22], Loss: 1.2051\n",
+      "Epoch [27/50], Step [20/22], Loss: 1.3613\n",
+      "Epoch [28/50], Step [10/22], Loss: 0.7067\n",
+      "Epoch [28/50], Step [20/22], Loss: 0.8829\n",
+      "Epoch [29/50], Step [10/22], Loss: 0.9480\n",
+      "Epoch [29/50], Step [20/22], Loss: 1.2671\n",
+      "Epoch [30/50], Step [10/22], Loss: 0.9943\n",
+      "Epoch [30/50], Step [20/22], Loss: 1.0479\n",
+      "Epoch [31/50], Step [10/22], Loss: 1.1615\n",
+      "Epoch [31/50], Step [20/22], Loss: 1.1221\n",
+      "Epoch [32/50], Step [10/22], Loss: 1.0073\n",
+      "Epoch [32/50], Step [20/22], Loss: 1.0432\n",
+      "Epoch [33/50], Step [10/22], Loss: 0.8202\n",
+      "Epoch [33/50], Step [20/22], Loss: 1.1023\n",
+      "Epoch [34/50], Step [10/22], Loss: 0.9722\n",
+      "Epoch [34/50], Step [20/22], Loss: 0.8475\n",
+      "Epoch [35/50], Step [10/22], Loss: 1.0741\n",
+      "Epoch [35/50], Step [20/22], Loss: 1.0855\n",
+      "Epoch [36/50], Step [10/22], Loss: 0.5797\n",
+      "Epoch [36/50], Step [20/22], Loss: 0.7580\n",
+      "Epoch [37/50], Step [10/22], Loss: 0.7985\n",
+      "Epoch [37/50], Step [20/22], Loss: 0.8418\n",
+      "Epoch [38/50], Step [10/22], Loss: 1.2819\n",
+      "Epoch [38/50], Step [20/22], Loss: 0.9490\n",
+      "Epoch [39/50], Step [10/22], Loss: 0.6736\n",
+      "Epoch [39/50], Step [20/22], Loss: 0.8669\n",
+      "Epoch [40/50], Step [10/22], Loss: 0.5922\n",
+      "Epoch [40/50], Step [20/22], Loss: 0.8871\n",
+      "Epoch [41/50], Step [10/22], Loss: 0.7795\n",
+      "Epoch [41/50], Step [20/22], Loss: 1.0333\n",
+      "Epoch [42/50], Step [10/22], Loss: 1.0221\n",
+      "Epoch [42/50], Step [20/22], Loss: 0.7683\n",
+      "Epoch [43/50], Step [10/22], Loss: 0.8835\n",
+      "Epoch [43/50], Step [20/22], Loss: 0.7985\n",
+      "Epoch [44/50], Step [10/22], Loss: 0.9134\n",
+      "Epoch [44/50], Step [20/22], Loss: 0.7694\n",
+      "Epoch [45/50], Step [10/22], Loss: 0.8209\n",
+      "Epoch [45/50], Step [20/22], Loss: 0.7403\n",
+      "Epoch [46/50], Step [10/22], Loss: 0.6572\n",
+      "Epoch [46/50], Step [20/22], Loss: 1.0372\n",
+      "Epoch [47/50], Step [10/22], Loss: 0.7932\n",
+      "Epoch [47/50], Step [20/22], Loss: 1.2734\n",
+      "Epoch [48/50], Step [10/22], Loss: 0.8210\n",
+      "Epoch [48/50], Step [20/22], Loss: 0.9650\n",
+      "Epoch [49/50], Step [10/22], Loss: 0.8701\n",
+      "Epoch [49/50], Step [20/22], Loss: 0.6512\n",
+      "Epoch [50/50], Step [10/22], Loss: 1.0723\n",
+      "Epoch [50/50], Step [20/22], Loss: 1.2726\n"
      ]
     }
    ],
@@ -267,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6409\n"
+      "Accuracy: 0.6644\n"
      ]
     }
    ],
@@ -296,13 +296,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6644\n",
+      "Precision: 0.6408\n",
+      "Recall: 0.6644\n",
+      "F1 score: 0.6334\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      0.87      0.80       162\n",
+      "           1       0.51      0.42      0.46        60\n",
+      "           2       0.61      0.62      0.61        50\n",
+      "           3       0.17      0.06      0.08        18\n",
+      "           4       1.00      0.00      0.00         8\n",
+      "\n",
+      "    accuracy                           0.66       298\n",
+      "   macro avg       0.60      0.39      0.39       298\n",
+      "weighted avg       0.64      0.66      0.63       298\n",
+      "\n",
+      "[[141  13   6   2   0]\n",
+      " [ 25  25   9   1   0]\n",
+      " [ 11   7  31   1   0]\n",
+      " [ 10   4   3   1   0]\n",
+      " [  5   0   2   1   0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report, confusion_matrix\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    total_correct = 0\n",
+    "    total_samples = 0\n",
+    "    predicted_labels = []\n",
+    "    targets = []\n",
+    "\n",
+    "    for inputs, labels in test_dataloader:\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total_samples += labels.size(0)\n",
+    "        total_correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "        predicted_labels.extend(predicted.tolist())\n",
+    "        targets.extend(labels.tolist())\n",
+    "\n",
+    "    accuracy = accuracy_score(targets, predicted_labels)\n",
+    "    precision = precision_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "    recall = recall_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "    f1 = f1_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "\n",
+    "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall: {recall:.4f}\")\n",
+    "    print(f\"F1 score: {f1:.4f}\")\n",
+    "\n",
+    "    print(classification_report(targets, predicted_labels, zero_division=1))\n",
+    "    print(confusion_matrix(targets, predicted_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# save model\n",
-    "torch.save(model, 'model.pth')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
