--- a/nn_feature_data_weight.ipynb
+++ b/nn_feature_data_weight.ipynb
@@ -162,106 +162,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/50], Step [10/22], Loss: 1.4403\n",
-      "Epoch [1/50], Step [20/22], Loss: 1.4211\n",
-      "Epoch [2/50], Step [10/22], Loss: 1.0698\n",
-      "Epoch [2/50], Step [20/22], Loss: 1.7003\n",
-      "Epoch [3/50], Step [10/22], Loss: 1.2760\n",
-      "Epoch [3/50], Step [20/22], Loss: 1.3079\n",
-      "Epoch [4/50], Step [10/22], Loss: 1.2174\n",
-      "Epoch [4/50], Step [20/22], Loss: 1.0789\n",
-      "Epoch [5/50], Step [10/22], Loss: 1.1824\n",
-      "Epoch [5/50], Step [20/22], Loss: 1.1550\n",
-      "Epoch [6/50], Step [10/22], Loss: 1.0789\n",
-      "Epoch [6/50], Step [20/22], Loss: 1.1075\n",
-      "Epoch [7/50], Step [10/22], Loss: 1.2292\n",
-      "Epoch [7/50], Step [20/22], Loss: 1.3776\n",
-      "Epoch [8/50], Step [10/22], Loss: 0.9262\n",
-      "Epoch [8/50], Step [20/22], Loss: 1.0712\n",
-      "Epoch [9/50], Step [10/22], Loss: 1.1319\n",
-      "Epoch [9/50], Step [20/22], Loss: 0.8667\n",
-      "Epoch [10/50], Step [10/22], Loss: 1.0283\n",
-      "Epoch [10/50], Step [20/22], Loss: 1.0209\n",
-      "Epoch [11/50], Step [10/22], Loss: 0.8983\n",
-      "Epoch [11/50], Step [20/22], Loss: 1.1274\n",
-      "Epoch [12/50], Step [10/22], Loss: 1.0116\n",
-      "Epoch [12/50], Step [20/22], Loss: 1.2076\n",
-      "Epoch [13/50], Step [10/22], Loss: 1.0544\n",
-      "Epoch [13/50], Step [20/22], Loss: 1.1592\n",
-      "Epoch [14/50], Step [10/22], Loss: 1.0151\n",
-      "Epoch [14/50], Step [20/22], Loss: 0.9747\n",
-      "Epoch [15/50], Step [10/22], Loss: 1.0461\n",
-      "Epoch [15/50], Step [20/22], Loss: 1.0313\n",
-      "Epoch [16/50], Step [10/22], Loss: 0.7961\n",
-      "Epoch [16/50], Step [20/22], Loss: 1.4853\n",
-      "Epoch [17/50], Step [10/22], Loss: 1.2326\n",
-      "Epoch [17/50], Step [20/22], Loss: 1.0057\n",
-      "Epoch [18/50], Step [10/22], Loss: 0.9062\n",
-      "Epoch [18/50], Step [20/22], Loss: 1.1586\n",
-      "Epoch [19/50], Step [10/22], Loss: 1.1265\n",
-      "Epoch [19/50], Step [20/22], Loss: 0.9788\n",
-      "Epoch [20/50], Step [10/22], Loss: 0.9484\n",
-      "Epoch [20/50], Step [20/22], Loss: 1.1137\n",
-      "Epoch [21/50], Step [10/22], Loss: 0.9148\n",
-      "Epoch [21/50], Step [20/22], Loss: 0.8901\n",
-      "Epoch [22/50], Step [10/22], Loss: 1.1105\n",
-      "Epoch [22/50], Step [20/22], Loss: 0.8724\n",
-      "Epoch [23/50], Step [10/22], Loss: 0.8188\n",
-      "Epoch [23/50], Step [20/22], Loss: 0.6051\n",
-      "Epoch [24/50], Step [10/22], Loss: 0.7985\n",
-      "Epoch [24/50], Step [20/22], Loss: 0.9676\n",
-      "Epoch [25/50], Step [10/22], Loss: 0.7236\n",
-      "Epoch [25/50], Step [20/22], Loss: 0.7334\n",
-      "Epoch [26/50], Step [10/22], Loss: 0.8213\n",
-      "Epoch [26/50], Step [20/22], Loss: 0.9605\n",
-      "Epoch [27/50], Step [10/22], Loss: 1.1026\n",
-      "Epoch [27/50], Step [20/22], Loss: 0.8167\n",
-      "Epoch [28/50], Step [10/22], Loss: 0.8068\n",
-      "Epoch [28/50], Step [20/22], Loss: 0.6898\n",
-      "Epoch [29/50], Step [10/22], Loss: 1.0673\n",
-      "Epoch [29/50], Step [20/22], Loss: 1.1157\n",
-      "Epoch [30/50], Step [10/22], Loss: 0.7358\n",
-      "Epoch [30/50], Step [20/22], Loss: 1.0397\n",
-      "Epoch [31/50], Step [10/22], Loss: 1.0652\n",
-      "Epoch [31/50], Step [20/22], Loss: 1.1449\n",
-      "Epoch [32/50], Step [10/22], Loss: 0.9852\n",
-      "Epoch [32/50], Step [20/22], Loss: 0.6252\n",
-      "Epoch [33/50], Step [10/22], Loss: 0.8418\n",
-      "Epoch [33/50], Step [20/22], Loss: 1.0323\n",
-      "Epoch [34/50], Step [10/22], Loss: 0.6800\n",
-      "Epoch [34/50], Step [20/22], Loss: 0.9989\n",
-      "Epoch [35/50], Step [10/22], Loss: 0.9204\n",
-      "Epoch [35/50], Step [20/22], Loss: 0.6305\n",
-      "Epoch [36/50], Step [10/22], Loss: 1.0350\n",
-      "Epoch [36/50], Step [20/22], Loss: 0.8414\n",
-      "Epoch [37/50], Step [10/22], Loss: 0.8788\n",
-      "Epoch [37/50], Step [20/22], Loss: 0.7108\n",
-      "Epoch [38/50], Step [10/22], Loss: 0.5790\n",
-      "Epoch [38/50], Step [20/22], Loss: 1.0634\n",
-      "Epoch [39/50], Step [10/22], Loss: 0.8952\n",
-      "Epoch [39/50], Step [20/22], Loss: 0.9297\n",
-      "Epoch [40/50], Step [10/22], Loss: 0.9576\n",
-      "Epoch [40/50], Step [20/22], Loss: 0.7392\n",
-      "Epoch [41/50], Step [10/22], Loss: 0.8765\n",
-      "Epoch [41/50], Step [20/22], Loss: 1.0324\n",
-      "Epoch [42/50], Step [10/22], Loss: 0.9691\n",
-      "Epoch [42/50], Step [20/22], Loss: 0.9828\n",
-      "Epoch [43/50], Step [10/22], Loss: 0.8524\n",
-      "Epoch [43/50], Step [20/22], Loss: 1.1280\n",
-      "Epoch [44/50], Step [10/22], Loss: 1.0201\n",
-      "Epoch [44/50], Step [20/22], Loss: 0.9311\n",
-      "Epoch [45/50], Step [10/22], Loss: 0.9297\n",
-      "Epoch [45/50], Step [20/22], Loss: 0.6468\n",
-      "Epoch [46/50], Step [10/22], Loss: 0.6983\n",
-      "Epoch [46/50], Step [20/22], Loss: 0.7191\n",
-      "Epoch [47/50], Step [10/22], Loss: 0.7661\n",
-      "Epoch [47/50], Step [20/22], Loss: 0.7565\n",
-      "Epoch [48/50], Step [10/22], Loss: 0.9487\n",
-      "Epoch [48/50], Step [20/22], Loss: 0.9202\n",
-      "Epoch [49/50], Step [10/22], Loss: 1.2428\n",
-      "Epoch [49/50], Step [20/22], Loss: 0.7969\n",
-      "Epoch [50/50], Step [10/22], Loss: 0.8265\n",
-      "Epoch [50/50], Step [20/22], Loss: 0.6864\n"
+      "Epoch [1/50], Step [10/22], Loss: 1.3876\n",
+      "Epoch [1/50], Step [20/22], Loss: 1.2799\n",
+      "Epoch [2/50], Step [10/22], Loss: 1.2382\n",
+      "Epoch [2/50], Step [20/22], Loss: 1.1173\n",
+      "Epoch [3/50], Step [10/22], Loss: 1.4101\n",
+      "Epoch [3/50], Step [20/22], Loss: 1.2449\n",
+      "Epoch [4/50], Step [10/22], Loss: 1.2664\n",
+      "Epoch [4/50], Step [20/22], Loss: 1.1704\n",
+      "Epoch [5/50], Step [10/22], Loss: 1.2380\n",
+      "Epoch [5/50], Step [20/22], Loss: 1.0985\n",
+      "Epoch [6/50], Step [10/22], Loss: 1.0712\n",
+      "Epoch [6/50], Step [20/22], Loss: 0.9054\n",
+      "Epoch [7/50], Step [10/22], Loss: 1.1080\n",
+      "Epoch [7/50], Step [20/22], Loss: 1.4039\n",
+      "Epoch [8/50], Step [10/22], Loss: 1.3415\n",
+      "Epoch [8/50], Step [20/22], Loss: 1.1690\n",
+      "Epoch [9/50], Step [10/22], Loss: 1.1338\n",
+      "Epoch [9/50], Step [20/22], Loss: 1.1422\n",
+      "Epoch [10/50], Step [10/22], Loss: 0.9198\n",
+      "Epoch [10/50], Step [20/22], Loss: 0.9277\n",
+      "Epoch [11/50], Step [10/22], Loss: 0.7818\n",
+      "Epoch [11/50], Step [20/22], Loss: 0.9087\n",
+      "Epoch [12/50], Step [10/22], Loss: 1.2322\n",
+      "Epoch [12/50], Step [20/22], Loss: 0.9670\n",
+      "Epoch [13/50], Step [10/22], Loss: 1.0938\n",
+      "Epoch [13/50], Step [20/22], Loss: 0.7271\n",
+      "Epoch [14/50], Step [10/22], Loss: 1.1193\n",
+      "Epoch [14/50], Step [20/22], Loss: 1.1252\n",
+      "Epoch [15/50], Step [10/22], Loss: 0.6834\n",
+      "Epoch [15/50], Step [20/22], Loss: 0.8784\n",
+      "Epoch [16/50], Step [10/22], Loss: 1.0413\n",
+      "Epoch [16/50], Step [20/22], Loss: 1.0522\n",
+      "Epoch [17/50], Step [10/22], Loss: 0.9913\n",
+      "Epoch [17/50], Step [20/22], Loss: 0.7370\n",
+      "Epoch [18/50], Step [10/22], Loss: 1.0725\n",
+      "Epoch [18/50], Step [20/22], Loss: 0.7617\n",
+      "Epoch [19/50], Step [10/22], Loss: 1.1134\n",
+      "Epoch [19/50], Step [20/22], Loss: 0.8005\n",
+      "Epoch [20/50], Step [10/22], Loss: 0.7481\n",
+      "Epoch [20/50], Step [20/22], Loss: 0.8171\n",
+      "Epoch [21/50], Step [10/22], Loss: 0.9945\n",
+      "Epoch [21/50], Step [20/22], Loss: 0.6941\n",
+      "Epoch [22/50], Step [10/22], Loss: 0.7801\n",
+      "Epoch [22/50], Step [20/22], Loss: 0.8103\n",
+      "Epoch [23/50], Step [10/22], Loss: 0.9223\n",
+      "Epoch [23/50], Step [20/22], Loss: 0.8291\n",
+      "Epoch [24/50], Step [10/22], Loss: 0.7626\n",
+      "Epoch [24/50], Step [20/22], Loss: 1.2519\n",
+      "Epoch [25/50], Step [10/22], Loss: 0.5595\n",
+      "Epoch [25/50], Step [20/22], Loss: 1.1197\n",
+      "Epoch [26/50], Step [10/22], Loss: 0.9305\n",
+      "Epoch [26/50], Step [20/22], Loss: 0.8478\n",
+      "Epoch [27/50], Step [10/22], Loss: 0.7513\n",
+      "Epoch [27/50], Step [20/22], Loss: 1.1383\n",
+      "Epoch [28/50], Step [10/22], Loss: 1.0056\n",
+      "Epoch [28/50], Step [20/22], Loss: 1.0370\n",
+      "Epoch [29/50], Step [10/22], Loss: 0.7675\n",
+      "Epoch [29/50], Step [20/22], Loss: 0.4941\n",
+      "Epoch [30/50], Step [10/22], Loss: 0.6347\n",
+      "Epoch [30/50], Step [20/22], Loss: 0.9732\n",
+      "Epoch [31/50], Step [10/22], Loss: 0.8968\n",
+      "Epoch [31/50], Step [20/22], Loss: 0.7211\n",
+      "Epoch [32/50], Step [10/22], Loss: 0.9680\n",
+      "Epoch [32/50], Step [20/22], Loss: 0.9135\n",
+      "Epoch [33/50], Step [10/22], Loss: 1.0481\n",
+      "Epoch [33/50], Step [20/22], Loss: 1.0496\n",
+      "Epoch [34/50], Step [10/22], Loss: 1.0507\n",
+      "Epoch [34/50], Step [20/22], Loss: 0.8047\n",
+      "Epoch [35/50], Step [10/22], Loss: 0.8716\n",
+      "Epoch [35/50], Step [20/22], Loss: 0.7007\n",
+      "Epoch [36/50], Step [10/22], Loss: 0.6136\n",
+      "Epoch [36/50], Step [20/22], Loss: 1.2615\n",
+      "Epoch [37/50], Step [10/22], Loss: 0.5738\n",
+      "Epoch [37/50], Step [20/22], Loss: 0.8952\n",
+      "Epoch [38/50], Step [10/22], Loss: 0.7097\n",
+      "Epoch [38/50], Step [20/22], Loss: 0.7786\n",
+      "Epoch [39/50], Step [10/22], Loss: 0.7811\n",
+      "Epoch [39/50], Step [20/22], Loss: 0.6567\n",
+      "Epoch [40/50], Step [10/22], Loss: 0.7751\n",
+      "Epoch [40/50], Step [20/22], Loss: 1.0621\n",
+      "Epoch [41/50], Step [10/22], Loss: 0.7826\n",
+      "Epoch [41/50], Step [20/22], Loss: 0.7015\n",
+      "Epoch [42/50], Step [10/22], Loss: 0.8808\n",
+      "Epoch [42/50], Step [20/22], Loss: 1.0387\n",
+      "Epoch [43/50], Step [10/22], Loss: 0.6451\n",
+      "Epoch [43/50], Step [20/22], Loss: 0.8742\n",
+      "Epoch [44/50], Step [10/22], Loss: 0.7044\n",
+      "Epoch [44/50], Step [20/22], Loss: 1.0065\n",
+      "Epoch [45/50], Step [10/22], Loss: 0.7221\n",
+      "Epoch [45/50], Step [20/22], Loss: 0.7603\n",
+      "Epoch [46/50], Step [10/22], Loss: 0.7170\n",
+      "Epoch [46/50], Step [20/22], Loss: 0.8773\n",
+      "Epoch [47/50], Step [10/22], Loss: 0.8760\n",
+      "Epoch [47/50], Step [20/22], Loss: 0.9635\n",
+      "Epoch [48/50], Step [10/22], Loss: 1.1604\n",
+      "Epoch [48/50], Step [20/22], Loss: 0.7951\n",
+      "Epoch [49/50], Step [10/22], Loss: 0.7924\n",
+      "Epoch [49/50], Step [20/22], Loss: 0.7620\n",
+      "Epoch [50/50], Step [10/22], Loss: 0.9924\n",
+      "Epoch [50/50], Step [20/22], Loss: 1.0256\n"
      ]
     }
    ],
@@ -292,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6409\n"
+      "Accuracy: 0.6644\n"
      ]
     }
    ],
@@ -310,6 +310,72 @@
     "    \n",
     "    accuracy = total_correct / total_samples\n",
     "    print(f\"Accuracy: {accuracy:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6644\n",
+      "Precision: 0.6479\n",
+      "Recall: 0.6644\n",
+      "F1 score: 0.6221\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.71      0.90      0.79       160\n",
+      "           1       0.65      0.34      0.44        65\n",
+      "           2       0.56      0.64      0.60        50\n",
+      "           3       0.00      0.00      0.00        13\n",
+      "           4       1.00      0.00      0.00        10\n",
+      "\n",
+      "    accuracy                           0.66       298\n",
+      "   macro avg       0.58      0.38      0.37       298\n",
+      "weighted avg       0.65      0.66      0.62       298\n",
+      "\n",
+      "[[144   6   8   2   0]\n",
+      " [ 30  22  13   0   0]\n",
+      " [ 13   5  32   0   0]\n",
+      " [  8   1   4   0   0]\n",
+      " [  9   0   0   1   0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report, confusion_matrix\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    total_correct = 0\n",
+    "    total_samples = 0\n",
+    "    predicted_labels = []\n",
+    "    targets = []\n",
+    "\n",
+    "    for inputs, labels in test_dataloader:\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total_samples += labels.size(0)\n",
+    "        total_correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "        predicted_labels.extend(predicted.tolist())\n",
+    "        targets.extend(labels.tolist())\n",
+    "\n",
+    "    accuracy = accuracy_score(targets, predicted_labels)\n",
+    "    precision = precision_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "    recall = recall_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "    f1 = f1_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "\n",
+    "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall: {recall:.4f}\")\n",
+    "    print(f\"F1 score: {f1:.4f}\")\n",
+    "\n",
+    "    print(classification_report(targets, predicted_labels, zero_division=1))\n",
+    "    print(confusion_matrix(targets, predicted_labels))"
    ]
   }
  ],
