--- a/nn_full_data.ipynb
+++ b/nn_full_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,113 +134,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/50], Step [10/22], Loss: 1.0930\n",
-      "Epoch [1/50], Step [20/22], Loss: 1.4058\n",
-      "Epoch [2/50], Step [10/22], Loss: 1.6457\n",
-      "Epoch [2/50], Step [20/22], Loss: 1.2392\n",
-      "Epoch [3/50], Step [10/22], Loss: 1.2946\n",
-      "Epoch [3/50], Step [20/22], Loss: 1.0546\n",
-      "Epoch [4/50], Step [10/22], Loss: 1.4021\n",
-      "Epoch [4/50], Step [20/22], Loss: 1.6898\n",
-      "Epoch [5/50], Step [10/22], Loss: 1.4754\n",
-      "Epoch [5/50], Step [20/22], Loss: 1.0977\n",
-      "Epoch [6/50], Step [10/22], Loss: 1.1399\n",
-      "Epoch [6/50], Step [20/22], Loss: 1.3630\n",
-      "Epoch [7/50], Step [10/22], Loss: 1.1592\n",
-      "Epoch [7/50], Step [20/22], Loss: 1.1825\n",
-      "Epoch [8/50], Step [10/22], Loss: 1.0764\n",
-      "Epoch [8/50], Step [20/22], Loss: 1.1282\n",
-      "Epoch [9/50], Step [10/22], Loss: 1.0173\n",
-      "Epoch [9/50], Step [20/22], Loss: 1.4983\n",
-      "Epoch [10/50], Step [10/22], Loss: 1.1056\n",
-      "Epoch [10/50], Step [20/22], Loss: 1.1618\n",
-      "Epoch [11/50], Step [10/22], Loss: 1.0588\n",
-      "Epoch [11/50], Step [20/22], Loss: 1.0571\n",
-      "Epoch [12/50], Step [10/22], Loss: 1.4346\n",
-      "Epoch [12/50], Step [20/22], Loss: 0.9036\n",
-      "Epoch [13/50], Step [10/22], Loss: 1.0445\n",
-      "Epoch [13/50], Step [20/22], Loss: 1.2891\n",
-      "Epoch [14/50], Step [10/22], Loss: 1.0573\n",
-      "Epoch [14/50], Step [20/22], Loss: 1.0536\n",
-      "Epoch [15/50], Step [10/22], Loss: 1.0127\n",
-      "Epoch [15/50], Step [20/22], Loss: 1.1126\n",
-      "Epoch [16/50], Step [10/22], Loss: 1.1071\n",
-      "Epoch [16/50], Step [20/22], Loss: 1.0743\n",
-      "Epoch [17/50], Step [10/22], Loss: 1.0154\n",
-      "Epoch [17/50], Step [20/22], Loss: 1.2782\n",
-      "Epoch [18/50], Step [10/22], Loss: 0.8849\n",
-      "Epoch [18/50], Step [20/22], Loss: 1.1013\n",
-      "Epoch [19/50], Step [10/22], Loss: 1.1373\n",
-      "Epoch [19/50], Step [20/22], Loss: 1.1592\n",
-      "Epoch [20/50], Step [10/22], Loss: 1.1026\n",
-      "Epoch [20/50], Step [20/22], Loss: 1.3218\n",
-      "Epoch [21/50], Step [10/22], Loss: 1.1505\n",
-      "Epoch [21/50], Step [20/22], Loss: 1.0150\n",
-      "Epoch [22/50], Step [10/22], Loss: 1.0327\n",
-      "Epoch [22/50], Step [20/22], Loss: 0.8480\n",
-      "Epoch [23/50], Step [10/22], Loss: 0.9371\n",
-      "Epoch [23/50], Step [20/22], Loss: 1.0025\n",
-      "Epoch [24/50], Step [10/22], Loss: 1.5050\n",
-      "Epoch [24/50], Step [20/22], Loss: 1.0616\n",
-      "Epoch [25/50], Step [10/22], Loss: 0.9400\n",
-      "Epoch [25/50], Step [20/22], Loss: 0.8349\n",
-      "Epoch [26/50], Step [10/22], Loss: 0.6345\n",
-      "Epoch [26/50], Step [20/22], Loss: 1.1587\n",
-      "Epoch [27/50], Step [10/22], Loss: 1.1615\n",
-      "Epoch [27/50], Step [20/22], Loss: 0.7135\n",
-      "Epoch [28/50], Step [10/22], Loss: 0.7870\n",
-      "Epoch [28/50], Step [20/22], Loss: 0.9148\n",
-      "Epoch [29/50], Step [10/22], Loss: 1.0764\n",
-      "Epoch [29/50], Step [20/22], Loss: 1.0593\n",
-      "Epoch [30/50], Step [10/22], Loss: 0.6781\n",
-      "Epoch [30/50], Step [20/22], Loss: 0.9081\n",
-      "Epoch [31/50], Step [10/22], Loss: 0.8178\n",
-      "Epoch [31/50], Step [20/22], Loss: 0.9436\n",
-      "Epoch [32/50], Step [10/22], Loss: 0.9734\n",
-      "Epoch [32/50], Step [20/22], Loss: 0.6867\n",
-      "Epoch [33/50], Step [10/22], Loss: 0.8484\n",
-      "Epoch [33/50], Step [20/22], Loss: 1.2009\n",
-      "Epoch [34/50], Step [10/22], Loss: 0.9978\n",
-      "Epoch [34/50], Step [20/22], Loss: 0.8531\n",
-      "Epoch [35/50], Step [10/22], Loss: 0.9920\n",
-      "Epoch [35/50], Step [20/22], Loss: 0.9620\n",
-      "Epoch [36/50], Step [10/22], Loss: 1.4142\n",
-      "Epoch [36/50], Step [20/22], Loss: 0.9634\n",
-      "Epoch [37/50], Step [10/22], Loss: 0.9246\n",
-      "Epoch [37/50], Step [20/22], Loss: 0.8503\n",
-      "Epoch [38/50], Step [10/22], Loss: 0.8966\n",
-      "Epoch [38/50], Step [20/22], Loss: 1.1071\n",
-      "Epoch [39/50], Step [10/22], Loss: 0.8321\n",
-      "Epoch [39/50], Step [20/22], Loss: 0.7985\n",
-      "Epoch [40/50], Step [10/22], Loss: 0.7169\n",
-      "Epoch [40/50], Step [20/22], Loss: 0.9482\n",
-      "Epoch [41/50], Step [10/22], Loss: 1.2087\n",
-      "Epoch [41/50], Step [20/22], Loss: 0.8758\n",
-      "Epoch [42/50], Step [10/22], Loss: 0.9554\n",
-      "Epoch [42/50], Step [20/22], Loss: 0.9630\n",
-      "Epoch [43/50], Step [10/22], Loss: 0.8899\n",
-      "Epoch [43/50], Step [20/22], Loss: 0.7020\n",
-      "Epoch [44/50], Step [10/22], Loss: 0.7601\n",
-      "Epoch [44/50], Step [20/22], Loss: 1.1924\n",
-      "Epoch [45/50], Step [10/22], Loss: 1.1194\n",
-      "Epoch [45/50], Step [20/22], Loss: 0.8131\n",
-      "Epoch [46/50], Step [10/22], Loss: 0.8734\n",
-      "Epoch [46/50], Step [20/22], Loss: 0.5965\n",
-      "Epoch [47/50], Step [10/22], Loss: 0.8040\n",
-      "Epoch [47/50], Step [20/22], Loss: 0.7297\n",
-      "Epoch [48/50], Step [10/22], Loss: 0.7206\n",
-      "Epoch [48/50], Step [20/22], Loss: 1.1112\n",
-      "Epoch [49/50], Step [10/22], Loss: 1.0780\n",
-      "Epoch [49/50], Step [20/22], Loss: 0.9208\n",
-      "Epoch [50/50], Step [10/22], Loss: 0.8481\n",
-      "Epoch [50/50], Step [20/22], Loss: 0.7045\n"
+      "Epoch [1/50], Step [10/22], Loss: 1.2686\n",
+      "Epoch [1/50], Step [20/22], Loss: 1.0929\n",
+      "Epoch [2/50], Step [10/22], Loss: 1.3991\n",
+      "Epoch [2/50], Step [20/22], Loss: 1.1204\n",
+      "Epoch [3/50], Step [10/22], Loss: 1.3584\n",
+      "Epoch [3/50], Step [20/22], Loss: 1.3496\n",
+      "Epoch [4/50], Step [10/22], Loss: 1.1774\n",
+      "Epoch [4/50], Step [20/22], Loss: 1.0629\n",
+      "Epoch [5/50], Step [10/22], Loss: 1.2591\n",
+      "Epoch [5/50], Step [20/22], Loss: 1.1837\n",
+      "Epoch [6/50], Step [10/22], Loss: 1.0945\n",
+      "Epoch [6/50], Step [20/22], Loss: 1.0343\n",
+      "Epoch [7/50], Step [10/22], Loss: 0.9377\n",
+      "Epoch [7/50], Step [20/22], Loss: 1.1245\n",
+      "Epoch [8/50], Step [10/22], Loss: 1.2363\n",
+      "Epoch [8/50], Step [20/22], Loss: 1.1476\n",
+      "Epoch [9/50], Step [10/22], Loss: 1.1598\n",
+      "Epoch [9/50], Step [20/22], Loss: 1.3148\n",
+      "Epoch [10/50], Step [10/22], Loss: 1.1895\n",
+      "Epoch [10/50], Step [20/22], Loss: 1.1845\n",
+      "Epoch [11/50], Step [10/22], Loss: 0.9748\n",
+      "Epoch [11/50], Step [20/22], Loss: 1.3340\n",
+      "Epoch [12/50], Step [10/22], Loss: 1.2853\n",
+      "Epoch [12/50], Step [20/22], Loss: 1.2633\n",
+      "Epoch [13/50], Step [10/22], Loss: 0.8511\n",
+      "Epoch [13/50], Step [20/22], Loss: 1.1997\n",
+      "Epoch [14/50], Step [10/22], Loss: 1.1300\n",
+      "Epoch [14/50], Step [20/22], Loss: 1.1530\n",
+      "Epoch [15/50], Step [10/22], Loss: 0.9563\n",
+      "Epoch [15/50], Step [20/22], Loss: 1.0964\n",
+      "Epoch [16/50], Step [10/22], Loss: 1.2489\n",
+      "Epoch [16/50], Step [20/22], Loss: 0.8381\n",
+      "Epoch [17/50], Step [10/22], Loss: 1.0620\n",
+      "Epoch [17/50], Step [20/22], Loss: 0.9169\n",
+      "Epoch [18/50], Step [10/22], Loss: 0.9129\n",
+      "Epoch [18/50], Step [20/22], Loss: 0.9403\n",
+      "Epoch [19/50], Step [10/22], Loss: 1.0164\n",
+      "Epoch [19/50], Step [20/22], Loss: 1.1149\n",
+      "Epoch [20/50], Step [10/22], Loss: 0.9491\n",
+      "Epoch [20/50], Step [20/22], Loss: 1.1267\n",
+      "Epoch [21/50], Step [10/22], Loss: 0.8531\n",
+      "Epoch [21/50], Step [20/22], Loss: 0.9107\n",
+      "Epoch [22/50], Step [10/22], Loss: 0.7937\n",
+      "Epoch [22/50], Step [20/22], Loss: 1.1160\n",
+      "Epoch [23/50], Step [10/22], Loss: 1.1959\n",
+      "Epoch [23/50], Step [20/22], Loss: 1.0659\n",
+      "Epoch [24/50], Step [10/22], Loss: 0.9427\n",
+      "Epoch [24/50], Step [20/22], Loss: 1.2213\n",
+      "Epoch [25/50], Step [10/22], Loss: 0.8692\n",
+      "Epoch [25/50], Step [20/22], Loss: 0.9837\n",
+      "Epoch [26/50], Step [10/22], Loss: 1.0557\n",
+      "Epoch [26/50], Step [20/22], Loss: 0.9114\n",
+      "Epoch [27/50], Step [10/22], Loss: 0.9364\n",
+      "Epoch [27/50], Step [20/22], Loss: 1.1409\n",
+      "Epoch [28/50], Step [10/22], Loss: 1.1112\n",
+      "Epoch [28/50], Step [20/22], Loss: 0.8201\n",
+      "Epoch [29/50], Step [10/22], Loss: 0.8228\n",
+      "Epoch [29/50], Step [20/22], Loss: 1.1730\n",
+      "Epoch [30/50], Step [10/22], Loss: 0.9674\n",
+      "Epoch [30/50], Step [20/22], Loss: 0.9951\n",
+      "Epoch [31/50], Step [10/22], Loss: 1.3519\n",
+      "Epoch [31/50], Step [20/22], Loss: 0.8105\n",
+      "Epoch [32/50], Step [10/22], Loss: 0.8717\n",
+      "Epoch [32/50], Step [20/22], Loss: 0.6883\n",
+      "Epoch [33/50], Step [10/22], Loss: 0.5980\n",
+      "Epoch [33/50], Step [20/22], Loss: 1.0618\n",
+      "Epoch [34/50], Step [10/22], Loss: 0.8568\n",
+      "Epoch [34/50], Step [20/22], Loss: 1.0956\n",
+      "Epoch [35/50], Step [10/22], Loss: 1.0494\n",
+      "Epoch [35/50], Step [20/22], Loss: 0.9992\n",
+      "Epoch [36/50], Step [10/22], Loss: 0.8766\n",
+      "Epoch [36/50], Step [20/22], Loss: 0.8588\n",
+      "Epoch [37/50], Step [10/22], Loss: 1.0588\n",
+      "Epoch [37/50], Step [20/22], Loss: 0.5864\n",
+      "Epoch [38/50], Step [10/22], Loss: 0.6119\n",
+      "Epoch [38/50], Step [20/22], Loss: 1.0172\n",
+      "Epoch [39/50], Step [10/22], Loss: 0.6091\n",
+      "Epoch [39/50], Step [20/22], Loss: 0.9241\n",
+      "Epoch [40/50], Step [10/22], Loss: 1.2216\n",
+      "Epoch [40/50], Step [20/22], Loss: 0.8539\n",
+      "Epoch [41/50], Step [10/22], Loss: 0.9324\n",
+      "Epoch [41/50], Step [20/22], Loss: 0.9818\n",
+      "Epoch [42/50], Step [10/22], Loss: 0.8602\n",
+      "Epoch [42/50], Step [20/22], Loss: 1.1201\n",
+      "Epoch [43/50], Step [10/22], Loss: 0.7620\n",
+      "Epoch [43/50], Step [20/22], Loss: 0.6804\n",
+      "Epoch [44/50], Step [10/22], Loss: 1.1396\n",
+      "Epoch [44/50], Step [20/22], Loss: 0.9913\n",
+      "Epoch [45/50], Step [10/22], Loss: 0.8728\n",
+      "Epoch [45/50], Step [20/22], Loss: 0.7977\n",
+      "Epoch [46/50], Step [10/22], Loss: 0.8365\n",
+      "Epoch [46/50], Step [20/22], Loss: 0.9860\n",
+      "Epoch [47/50], Step [10/22], Loss: 0.8535\n",
+      "Epoch [47/50], Step [20/22], Loss: 0.9680\n",
+      "Epoch [48/50], Step [10/22], Loss: 0.8821\n",
+      "Epoch [48/50], Step [20/22], Loss: 0.9093\n",
+      "Epoch [49/50], Step [10/22], Loss: 1.0128\n",
+      "Epoch [49/50], Step [20/22], Loss: 1.0203\n",
+      "Epoch [50/50], Step [10/22], Loss: 0.8301\n",
+      "Epoch [50/50], Step [20/22], Loss: 1.1259\n"
      ]
     }
    ],
@@ -264,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6376\n"
+      "Accuracy: 0.6510\n"
      ]
     }
    ],
@@ -289,6 +289,72 @@
     "    \n",
     "    accuracy = total_correct / total_samples\n",
     "    print(f\"Accuracy: {accuracy:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6510\n",
+      "Precision: 0.6435\n",
+      "Recall: 0.6510\n",
+      "F1 score: 0.6120\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.72      0.87      0.79       162\n",
+      "           1       0.49      0.40      0.44        60\n",
+      "           2       0.57      0.58      0.57        50\n",
+      "           3       1.00      0.00      0.00        18\n",
+      "           4       0.00      0.00      0.00         8\n",
+      "\n",
+      "    accuracy                           0.65       298\n",
+      "   macro avg       0.55      0.37      0.36       298\n",
+      "weighted avg       0.64      0.65      0.61       298\n",
+      "\n",
+      "[[141  13   7   0   1]\n",
+      " [ 27  24   9   0   0]\n",
+      " [ 13   8  29   0   0]\n",
+      " [ 10   4   4   0   0]\n",
+      " [  6   0   2   0   0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report, confusion_matrix\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    total_correct = 0\n",
+    "    total_samples = 0\n",
+    "    predicted_labels = []\n",
+    "    targets = []\n",
+    "\n",
+    "    for inputs, labels in test_dataloader:\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total_samples += labels.size(0)\n",
+    "        total_correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "        predicted_labels.extend(predicted.tolist())\n",
+    "        targets.extend(labels.tolist())\n",
+    "\n",
+    "    accuracy = accuracy_score(targets, predicted_labels)\n",
+    "    precision = precision_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "    recall = recall_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "    f1 = f1_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "\n",
+    "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall: {recall:.4f}\")\n",
+    "    print(f\"F1 score: {f1:.4f}\")\n",
+    "\n",
+    "    print(classification_report(targets, predicted_labels, zero_division=1))\n",
+    "    print(confusion_matrix(targets, predicted_labels))"
    ]
   }
  ],
