--- a/svm_feature_data_weight.ipynb
+++ b/svm_feature_data_weight.ipynb
@@ -269,6 +269,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['ID' 'Sex' 'Age' 'Disease category' 'Narrow pitch range'\n",
+      " 'Decreased volume' 'Fatigue' 'Dryness' 'Lumping' 'heartburn' 'Choking'\n",
+      " 'Eye dryness' 'PND' 'Smoking' 'PPD' 'Drinking' 'frequency'\n",
+      " 'Diurnal pattern' 'Onset of dysphonia ' 'Noise at work'\n",
+      " 'Occupational vocal demand' 'Diabetes' 'Hypertension' 'CAD'\n",
+      " 'Head and Neck Cancer' 'Head injury' 'CVA' 'Voice handicap index - 10']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Label 1: 372 samples\n",
       "Label 2: 153 samples\n",
       "Label 3: 117 samples\n",
@@ -300,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +358,7 @@
        "       1, 2, 1, 1, 2, 1, 2, 2, 1, 2, 2, 1])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +391,7 @@
        "       3, 2, 1, 1, 1, 1, 2, 2, 1, 1, 2, 1])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -388,9 +410,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.68\n",
-      "F1: 0.64\n",
       "Precision: 0.7\n",
       "Recall: 0.68\n",
+      "F1: 0.64\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           1       0.71      0.92      0.80       160\n",
@@ -415,14 +437,14 @@
     "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score, classification_report, confusion_matrix\n",
     "\n",
     "accuracy = accuracy_score(y_test.values, y_pred)\n",
-    "f1 = f1_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
     "precision = precision_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
     "recall = recall_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
+    "f1 = f1_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
     "\n",
     "print(f\"Accuracy: {accuracy.round(2)}\")\n",
-    "print(f\"F1: {f1.round(2)}\")\n",
     "print(f\"Precision: {precision.round(2)}\")\n",
     "print(f\"Recall: {recall.round(2)}\")\n",
+    "print(f\"F1: {f1.round(2)}\")\n",
     "\n",
     "print(classification_report(y_test.values, y_pred, zero_division=1))\n",
     "print(confusion_matrix(y_test.values, y_pred))"
@@ -430,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -546,25 +568,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save the model and scaler\n",
-    "import pickle\n",
-    "pickle.dump(svc_model, open('model.pkl', 'wb'))\n",
-    "pickle.dump(scaler, open('scaler.pkl', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the model and scaler\n",
-    "model = pickle.load(open('model.pkl', 'rb'))\n",
-    "scaler = pickle.load(open('scaler.pkl', 'rb'))"
+    "# # save the model and scaler\n",
+    "# import pickle\n",
+    "# pickle.dump(svc_model, open('model.pkl', 'wb'))\n",
+    "# pickle.dump(scaler, open('scaler.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # load the model and scaler\n",
+    "# model = pickle.load(open('model.pkl', 'rb'))\n",
+    "# scaler = pickle.load(open('scaler.pkl', 'rb'))"
    ]
   }
  ],
