--- a/nn_full_data_weight.ipynb
+++ b/nn_full_data_weight.ipynb
@@ -159,106 +159,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/50], Step [10/22], Loss: 1.2135\n",
-      "Epoch [1/50], Step [20/22], Loss: 0.9667\n",
-      "Epoch [2/50], Step [10/22], Loss: 1.3718\n",
-      "Epoch [2/50], Step [20/22], Loss: 1.3975\n",
-      "Epoch [3/50], Step [10/22], Loss: 1.1382\n",
-      "Epoch [3/50], Step [20/22], Loss: 1.1854\n",
-      "Epoch [4/50], Step [10/22], Loss: 1.3750\n",
-      "Epoch [4/50], Step [20/22], Loss: 1.2310\n",
-      "Epoch [5/50], Step [10/22], Loss: 1.4047\n",
-      "Epoch [5/50], Step [20/22], Loss: 1.2564\n",
-      "Epoch [6/50], Step [10/22], Loss: 1.0879\n",
-      "Epoch [6/50], Step [20/22], Loss: 1.2381\n",
-      "Epoch [7/50], Step [10/22], Loss: 1.3146\n",
-      "Epoch [7/50], Step [20/22], Loss: 1.3126\n",
-      "Epoch [8/50], Step [10/22], Loss: 1.1276\n",
-      "Epoch [8/50], Step [20/22], Loss: 1.1196\n",
-      "Epoch [9/50], Step [10/22], Loss: 1.3418\n",
-      "Epoch [9/50], Step [20/22], Loss: 1.1844\n",
-      "Epoch [10/50], Step [10/22], Loss: 1.1665\n",
-      "Epoch [10/50], Step [20/22], Loss: 1.2960\n",
-      "Epoch [11/50], Step [10/22], Loss: 0.9387\n",
-      "Epoch [11/50], Step [20/22], Loss: 1.1458\n",
-      "Epoch [12/50], Step [10/22], Loss: 1.1195\n",
-      "Epoch [12/50], Step [20/22], Loss: 1.0722\n",
-      "Epoch [13/50], Step [10/22], Loss: 1.4416\n",
-      "Epoch [13/50], Step [20/22], Loss: 1.4018\n",
-      "Epoch [14/50], Step [10/22], Loss: 1.0756\n",
-      "Epoch [14/50], Step [20/22], Loss: 1.0712\n",
-      "Epoch [15/50], Step [10/22], Loss: 0.9356\n",
-      "Epoch [15/50], Step [20/22], Loss: 1.2025\n",
-      "Epoch [16/50], Step [10/22], Loss: 0.9650\n",
-      "Epoch [16/50], Step [20/22], Loss: 1.1593\n",
-      "Epoch [17/50], Step [10/22], Loss: 1.2298\n",
-      "Epoch [17/50], Step [20/22], Loss: 1.0052\n",
-      "Epoch [18/50], Step [10/22], Loss: 1.0024\n",
-      "Epoch [18/50], Step [20/22], Loss: 0.9051\n",
-      "Epoch [19/50], Step [10/22], Loss: 0.8452\n",
-      "Epoch [19/50], Step [20/22], Loss: 0.9044\n",
-      "Epoch [20/50], Step [10/22], Loss: 1.0471\n",
-      "Epoch [20/50], Step [20/22], Loss: 1.0202\n",
-      "Epoch [21/50], Step [10/22], Loss: 0.8326\n",
-      "Epoch [21/50], Step [20/22], Loss: 1.1001\n",
-      "Epoch [22/50], Step [10/22], Loss: 0.9357\n",
-      "Epoch [22/50], Step [20/22], Loss: 0.8575\n",
-      "Epoch [23/50], Step [10/22], Loss: 0.9410\n",
-      "Epoch [23/50], Step [20/22], Loss: 1.0063\n",
-      "Epoch [24/50], Step [10/22], Loss: 0.7898\n",
-      "Epoch [24/50], Step [20/22], Loss: 0.9381\n",
-      "Epoch [25/50], Step [10/22], Loss: 0.9000\n",
-      "Epoch [25/50], Step [20/22], Loss: 1.2691\n",
-      "Epoch [26/50], Step [10/22], Loss: 1.0121\n",
-      "Epoch [26/50], Step [20/22], Loss: 1.0191\n",
-      "Epoch [27/50], Step [10/22], Loss: 0.9382\n",
-      "Epoch [27/50], Step [20/22], Loss: 0.8908\n",
-      "Epoch [28/50], Step [10/22], Loss: 0.7034\n",
-      "Epoch [28/50], Step [20/22], Loss: 1.2076\n",
-      "Epoch [29/50], Step [10/22], Loss: 1.0552\n",
-      "Epoch [29/50], Step [20/22], Loss: 0.8627\n",
-      "Epoch [30/50], Step [10/22], Loss: 0.9450\n",
-      "Epoch [30/50], Step [20/22], Loss: 0.6771\n",
-      "Epoch [31/50], Step [10/22], Loss: 0.9988\n",
-      "Epoch [31/50], Step [20/22], Loss: 0.8341\n",
-      "Epoch [32/50], Step [10/22], Loss: 0.9554\n",
-      "Epoch [32/50], Step [20/22], Loss: 0.8662\n",
-      "Epoch [33/50], Step [10/22], Loss: 0.8423\n",
-      "Epoch [33/50], Step [20/22], Loss: 1.0745\n",
-      "Epoch [34/50], Step [10/22], Loss: 0.7166\n",
-      "Epoch [34/50], Step [20/22], Loss: 1.0354\n",
-      "Epoch [35/50], Step [10/22], Loss: 0.9310\n",
-      "Epoch [35/50], Step [20/22], Loss: 0.8442\n",
-      "Epoch [36/50], Step [10/22], Loss: 1.0882\n",
-      "Epoch [36/50], Step [20/22], Loss: 1.0089\n",
-      "Epoch [37/50], Step [10/22], Loss: 0.7256\n",
-      "Epoch [37/50], Step [20/22], Loss: 0.9963\n",
-      "Epoch [38/50], Step [10/22], Loss: 1.0163\n",
-      "Epoch [38/50], Step [20/22], Loss: 1.1750\n",
-      "Epoch [39/50], Step [10/22], Loss: 0.7992\n",
-      "Epoch [39/50], Step [20/22], Loss: 0.7068\n",
-      "Epoch [40/50], Step [10/22], Loss: 0.9431\n",
-      "Epoch [40/50], Step [20/22], Loss: 0.9013\n",
-      "Epoch [41/50], Step [10/22], Loss: 1.2021\n",
-      "Epoch [41/50], Step [20/22], Loss: 0.6856\n",
-      "Epoch [42/50], Step [10/22], Loss: 0.7321\n",
-      "Epoch [42/50], Step [20/22], Loss: 1.1948\n",
-      "Epoch [43/50], Step [10/22], Loss: 1.1371\n",
-      "Epoch [43/50], Step [20/22], Loss: 1.0000\n",
-      "Epoch [44/50], Step [10/22], Loss: 0.7380\n",
-      "Epoch [44/50], Step [20/22], Loss: 0.8029\n",
-      "Epoch [45/50], Step [10/22], Loss: 0.9597\n",
-      "Epoch [45/50], Step [20/22], Loss: 0.9759\n",
-      "Epoch [46/50], Step [10/22], Loss: 0.8166\n",
-      "Epoch [46/50], Step [20/22], Loss: 0.8798\n",
-      "Epoch [47/50], Step [10/22], Loss: 1.0236\n",
-      "Epoch [47/50], Step [20/22], Loss: 1.0052\n",
-      "Epoch [48/50], Step [10/22], Loss: 0.7570\n",
-      "Epoch [48/50], Step [20/22], Loss: 0.6277\n",
-      "Epoch [49/50], Step [10/22], Loss: 0.8394\n",
-      "Epoch [49/50], Step [20/22], Loss: 0.6367\n",
-      "Epoch [50/50], Step [10/22], Loss: 1.0155\n",
-      "Epoch [50/50], Step [20/22], Loss: 0.8698\n"
+      "Epoch [1/50], Step [10/22], Loss: 1.5618\n",
+      "Epoch [1/50], Step [20/22], Loss: 1.4592\n",
+      "Epoch [2/50], Step [10/22], Loss: 1.4311\n",
+      "Epoch [2/50], Step [20/22], Loss: 1.2053\n",
+      "Epoch [3/50], Step [10/22], Loss: 1.3500\n",
+      "Epoch [3/50], Step [20/22], Loss: 1.2760\n",
+      "Epoch [4/50], Step [10/22], Loss: 1.0610\n",
+      "Epoch [4/50], Step [20/22], Loss: 1.3360\n",
+      "Epoch [5/50], Step [10/22], Loss: 1.1079\n",
+      "Epoch [5/50], Step [20/22], Loss: 1.2340\n",
+      "Epoch [6/50], Step [10/22], Loss: 1.3013\n",
+      "Epoch [6/50], Step [20/22], Loss: 1.3011\n",
+      "Epoch [7/50], Step [10/22], Loss: 1.0916\n",
+      "Epoch [7/50], Step [20/22], Loss: 1.4600\n",
+      "Epoch [8/50], Step [10/22], Loss: 1.1392\n",
+      "Epoch [8/50], Step [20/22], Loss: 1.3163\n",
+      "Epoch [9/50], Step [10/22], Loss: 1.2129\n",
+      "Epoch [9/50], Step [20/22], Loss: 1.1150\n",
+      "Epoch [10/50], Step [10/22], Loss: 1.3164\n",
+      "Epoch [10/50], Step [20/22], Loss: 1.2242\n",
+      "Epoch [11/50], Step [10/22], Loss: 1.1681\n",
+      "Epoch [11/50], Step [20/22], Loss: 1.2597\n",
+      "Epoch [12/50], Step [10/22], Loss: 1.2348\n",
+      "Epoch [12/50], Step [20/22], Loss: 1.3461\n",
+      "Epoch [13/50], Step [10/22], Loss: 1.1369\n",
+      "Epoch [13/50], Step [20/22], Loss: 0.9712\n",
+      "Epoch [14/50], Step [10/22], Loss: 1.1394\n",
+      "Epoch [14/50], Step [20/22], Loss: 1.0765\n",
+      "Epoch [15/50], Step [10/22], Loss: 1.2708\n",
+      "Epoch [15/50], Step [20/22], Loss: 0.9577\n",
+      "Epoch [16/50], Step [10/22], Loss: 0.9825\n",
+      "Epoch [16/50], Step [20/22], Loss: 1.1675\n",
+      "Epoch [17/50], Step [10/22], Loss: 1.2549\n",
+      "Epoch [17/50], Step [20/22], Loss: 1.2017\n",
+      "Epoch [18/50], Step [10/22], Loss: 0.9535\n",
+      "Epoch [18/50], Step [20/22], Loss: 1.0507\n",
+      "Epoch [19/50], Step [10/22], Loss: 0.8477\n",
+      "Epoch [19/50], Step [20/22], Loss: 1.3144\n",
+      "Epoch [20/50], Step [10/22], Loss: 1.1831\n",
+      "Epoch [20/50], Step [20/22], Loss: 1.1073\n",
+      "Epoch [21/50], Step [10/22], Loss: 0.9107\n",
+      "Epoch [21/50], Step [20/22], Loss: 0.8685\n",
+      "Epoch [22/50], Step [10/22], Loss: 1.1290\n",
+      "Epoch [22/50], Step [20/22], Loss: 1.2504\n",
+      "Epoch [23/50], Step [10/22], Loss: 1.0939\n",
+      "Epoch [23/50], Step [20/22], Loss: 0.7569\n",
+      "Epoch [24/50], Step [10/22], Loss: 1.2782\n",
+      "Epoch [24/50], Step [20/22], Loss: 1.0315\n",
+      "Epoch [25/50], Step [10/22], Loss: 0.8152\n",
+      "Epoch [25/50], Step [20/22], Loss: 1.0302\n",
+      "Epoch [26/50], Step [10/22], Loss: 1.1645\n",
+      "Epoch [26/50], Step [20/22], Loss: 1.1651\n",
+      "Epoch [27/50], Step [10/22], Loss: 1.0047\n",
+      "Epoch [27/50], Step [20/22], Loss: 0.7487\n",
+      "Epoch [28/50], Step [10/22], Loss: 0.9445\n",
+      "Epoch [28/50], Step [20/22], Loss: 1.0602\n",
+      "Epoch [29/50], Step [10/22], Loss: 0.7843\n",
+      "Epoch [29/50], Step [20/22], Loss: 0.8156\n",
+      "Epoch [30/50], Step [10/22], Loss: 1.1646\n",
+      "Epoch [30/50], Step [20/22], Loss: 1.1245\n",
+      "Epoch [31/50], Step [10/22], Loss: 1.0672\n",
+      "Epoch [31/50], Step [20/22], Loss: 0.8987\n",
+      "Epoch [32/50], Step [10/22], Loss: 0.9549\n",
+      "Epoch [32/50], Step [20/22], Loss: 0.9887\n",
+      "Epoch [33/50], Step [10/22], Loss: 1.0947\n",
+      "Epoch [33/50], Step [20/22], Loss: 1.0038\n",
+      "Epoch [34/50], Step [10/22], Loss: 0.8473\n",
+      "Epoch [34/50], Step [20/22], Loss: 0.9387\n",
+      "Epoch [35/50], Step [10/22], Loss: 0.9389\n",
+      "Epoch [35/50], Step [20/22], Loss: 1.1226\n",
+      "Epoch [36/50], Step [10/22], Loss: 0.8392\n",
+      "Epoch [36/50], Step [20/22], Loss: 1.1375\n",
+      "Epoch [37/50], Step [10/22], Loss: 1.0759\n",
+      "Epoch [37/50], Step [20/22], Loss: 0.9904\n",
+      "Epoch [38/50], Step [10/22], Loss: 1.1500\n",
+      "Epoch [38/50], Step [20/22], Loss: 1.0305\n",
+      "Epoch [39/50], Step [10/22], Loss: 0.6057\n",
+      "Epoch [39/50], Step [20/22], Loss: 0.9457\n",
+      "Epoch [40/50], Step [10/22], Loss: 0.7407\n",
+      "Epoch [40/50], Step [20/22], Loss: 1.0189\n",
+      "Epoch [41/50], Step [10/22], Loss: 0.7045\n",
+      "Epoch [41/50], Step [20/22], Loss: 0.9758\n",
+      "Epoch [42/50], Step [10/22], Loss: 0.9585\n",
+      "Epoch [42/50], Step [20/22], Loss: 0.9140\n",
+      "Epoch [43/50], Step [10/22], Loss: 1.1214\n",
+      "Epoch [43/50], Step [20/22], Loss: 0.8319\n",
+      "Epoch [44/50], Step [10/22], Loss: 0.8057\n",
+      "Epoch [44/50], Step [20/22], Loss: 0.8331\n",
+      "Epoch [45/50], Step [10/22], Loss: 0.8696\n",
+      "Epoch [45/50], Step [20/22], Loss: 0.6597\n",
+      "Epoch [46/50], Step [10/22], Loss: 1.0924\n",
+      "Epoch [46/50], Step [20/22], Loss: 0.8885\n",
+      "Epoch [47/50], Step [10/22], Loss: 1.1081\n",
+      "Epoch [47/50], Step [20/22], Loss: 1.0016\n",
+      "Epoch [48/50], Step [10/22], Loss: 1.0318\n",
+      "Epoch [48/50], Step [20/22], Loss: 0.9683\n",
+      "Epoch [49/50], Step [10/22], Loss: 0.9595\n",
+      "Epoch [49/50], Step [20/22], Loss: 1.2631\n",
+      "Epoch [50/50], Step [10/22], Loss: 0.9096\n",
+      "Epoch [50/50], Step [20/22], Loss: 1.0237\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6443\n"
+      "Accuracy: 0.6711\n"
      ]
     }
    ],
@@ -307,6 +307,72 @@
     "    \n",
     "    accuracy = total_correct / total_samples\n",
     "    print(f\"Accuracy: {accuracy:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6711\n",
+      "Precision: 0.6889\n",
+      "Recall: 0.6711\n",
+      "F1 score: 0.6355\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      0.86      0.79       160\n",
+      "           1       0.57      0.43      0.49        65\n",
+      "           2       0.57      0.68      0.62        50\n",
+      "           3       1.00      0.00      0.00        13\n",
+      "           4       1.00      0.00      0.00        10\n",
+      "\n",
+      "    accuracy                           0.67       298\n",
+      "   macro avg       0.77      0.39      0.38       298\n",
+      "weighted avg       0.69      0.67      0.64       298\n",
+      "\n",
+      "[[138  13   9   0   0]\n",
+      " [ 24  28  13   0   0]\n",
+      " [ 10   6  34   0   0]\n",
+      " [  8   2   3   0   0]\n",
+      " [  9   0   1   0   0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report, confusion_matrix\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    total_correct = 0\n",
+    "    total_samples = 0\n",
+    "    predicted_labels = []\n",
+    "    targets = []\n",
+    "\n",
+    "    for inputs, labels in test_dataloader:\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total_samples += labels.size(0)\n",
+    "        total_correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "        predicted_labels.extend(predicted.tolist())\n",
+    "        targets.extend(labels.tolist())\n",
+    "\n",
+    "    accuracy = accuracy_score(targets, predicted_labels)\n",
+    "    precision = precision_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "    recall = recall_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "    f1 = f1_score(targets, predicted_labels, average='weighted', zero_division=1)\n",
+    "\n",
+    "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall: {recall:.4f}\")\n",
+    "    print(f\"F1 score: {f1:.4f}\")\n",
+    "\n",
+    "    print(classification_report(targets, predicted_labels, zero_division=1))\n",
+    "    print(confusion_matrix(targets, predicted_labels))"
    ]
   }
  ],
