--- a/svm_feature_data.ipynb
+++ b/svm_feature_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "       1, 2, 5, 1, 1, 1, 3, 1, 3, 1, 3, 3])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "       1, 2, 1, 1, 1, 1, 3, 1, 2, 3, 2, 3])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -370,9 +370,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.65\n",
-      "F1: 0.61\n",
       "Precision: 0.68\n",
       "Recall: 0.65\n",
+      "F1: 0.61\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           1       0.68      0.89      0.77       153\n",
@@ -397,14 +397,14 @@
     "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score, classification_report, confusion_matrix\n",
     "\n",
     "accuracy = accuracy_score(y_test.values, y_pred)\n",
-    "f1 = f1_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
     "precision = precision_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
     "recall = recall_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
+    "f1 = f1_score(y_test.values, y_pred, average='weighted', zero_division=1)\n",
     "\n",
     "print(f\"Accuracy: {accuracy.round(2)}\")\n",
-    "print(f\"F1: {f1.round(2)}\")\n",
     "print(f\"Precision: {precision.round(2)}\")\n",
     "print(f\"Recall: {recall.round(2)}\")\n",
+    "print(f\"F1: {f1.round(2)}\")\n",
     "\n",
     "print(classification_report(y_test.values, y_pred, zero_division=1))\n",
     "print(confusion_matrix(y_test.values, y_pred))"
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -538,25 +538,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save the model and scaler\n",
-    "import pickle\n",
-    "pickle.dump(svc_model, open('model.pkl', 'wb'))\n",
-    "pickle.dump(scaler, open('scaler.pkl', 'wb'))"
+    "# # save the model and scaler\n",
+    "# import pickle\n",
+    "# pickle.dump(svc_model, open('model.pkl', 'wb'))\n",
+    "# pickle.dump(scaler, open('scaler.pkl', 'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the model and scaler\n",
-    "model = pickle.load(open('model.pkl', 'rb'))\n",
-    "scaler = pickle.load(open('scaler.pkl', 'rb'))"
+    "# # load the model and scaler\n",
+    "# model = pickle.load(open('model.pkl', 'rb'))\n",
+    "# scaler = pickle.load(open('scaler.pkl', 'rb'))"
    ]
   }
  ],
